Update Index on h1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         /* --- CSS: ส่วนตกแต่งความสวยงาม --- */
         :root {
             --primary-color: #D4A5A5; /* สีชมพูตุ่นๆ ธีมร้าน */
-            --bg-color: #FFF9F9;      /* พื้นหลังสีขาวอมชมพู */
+            --bg-color: #FFFBFA;      /* พื้นหลังสีขาวอมชมพู */
             --text-color: #4A4A4A;
             --success-color: #88C999; /* สีเขียว */
             --error-color: #E57373;   /* สีแดง */
@@ -39,15 +39,10 @@
         }
 
         .header h1 {
-            color: var(--primary-color);
-            font-size: 2.5rem;
+            color: #888;
+            font-size: 1.5rem;
             margin-top: 0;
             margin-bottom: 5px;
-        }
-
-        .header p {
-            font-size: 1.2rem;
-            color: #888;
         }
 
         /* กล่องปฏิทิน (Grid) */
@@ -117,8 +112,7 @@
     <div class="header">
         <img src="logo.png" alt="Logo" class="site-logo"> 
         
-        <h1>Foreverbloom Studio</h1>
-        <p>เช็คคิวว่างเรียลไทม์ 🗓️✨</p>
+        <h1>เช็คคิวว่างเรียลไทม์ 🗓️✨</h1>
     </div>
 
     <div id="loading">กำลังโหลดคิว... 🌸</div>
